# ctts

./: .env-example  .flake8  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  example.ipynb  pyproject.toml
examples/: example.ipynb
src/ctts/: __init__.py  cartesia.py  config.py  elevenlabs.py  hume.py  kokoro.py  openai.py  orpheus.py  replicate.py  utils.py  zyphra.py
src/utts/: __init__.py  cartesia.py  client.py  config.py  elevenlabs.py  hume.py  kokoro.py  openai.py  orpheus.py  zyphra.py
