[project]
name = "ctts"
version = "0.1.0"
description = "Compare different text-to-speech providers"
readme = "README.md"
authors = [
    { name = "Dave Savostyanov", email = "ds@artifactory.ai" }
]
requires-python = ">=3.11.12"
dependencies = [
    "mypy>=1.15.0",
    "openai>=1.76.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
]

[tool.ruff]
line-length = 120
