[project]
name = "ctts"
version = "0.1.0"
description = "Compare different text-to-speech providers"
readme = "README.md"
authors = [
    { name = "Dave Savostyanov", email = "ds@artifactory.ai" }
]
requires-python = ">=3.11.12"
dependencies = [
    "flake8-annotations>=3.1.1",
    "openai>=1.76.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pyright>=1.1.400",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["venv*", ".venv*", ".git", "adhoc"]

[tool.ruff.lint]
select = ["E", "F", "I", "ANN"]
ignore = [
    "ANN204",  # Missing return type annotation for special method `__*__`
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-first-party = ["ctts"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
reportImplicitStringConcatenation = "warning"
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUntypedFunctionDecorator = false
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportGeneralTypeIssues = "error"
reportReturnType = "error"
